...
    onSubmitReminder: (Reminder) -> Unit,
    onCancel: () -> Unit,
    ) {
    TireWiseTheme {
        val context = LocalContext.current

        var selectedOption by remember { mutableStateOf("Tire Replacement") }
        var reminderTitle by remember { mutableStateOf("") }
        var reminderNotes by remember { mutableStateOf("") }
        var reminderTime by remember { mutableStateOf("") }
        var reminderDate by remember { mutableStateOf("") }

        var calendarState = rememberSheetState()
...
                        CustomOutlinedButton(
                            onClick = { onCancel() },
                            modifier = Modifier
                                .height(48.dp)
                                .weight(1f)
                        ) {
                            Text(text = "Cancel", fontWeight = FontWeight.Bold)
                        }
                    }


                    // Submit Button
                    Row(modifier = Modifier.weight(1f),
...
                                }
                            },
                            modifier = Modifier
                                .height(48.dp)
                                .weight(1f)
                        ) {
                            Text(text = "Submit", fontWeight = FontWeight.Bold)
                        }
                    }
                }
            }
        ) {
            Column(
...
                //make a radiobox with {tire replacement, tire Checkup, Custom}

                Column( modifier = Modifier.wrapContentHeight()) {
                    RadioButtonGroup2(
                        listTitle = "Reminder Type:",
                        options = listOf(
                            "Tire Replacement", "Tire Rotation",
                            "Tire Checkup", "Tire Alignment",
                            "Oil Change", "Insurance Renewal",
                        ),
                        selectedOption = selectedOption,
                        onOptionSelected = {
                            selectedOption = it
                        }
                    )
...
                                    color = MaterialTheme.colorScheme.tertiary,
                                    MaterialTheme.shapes.large
                                ),
                            elevation = FloatingActionButtonDefaults.elevation(0.dp),
                            containerColor = MaterialTheme.colorScheme.primary,
                            onClick = { calendarState.show() },
                            text = { Text(text = "Select Date", fontWeight = FontWeight.Bold) },
                            icon = {
                                Icon(
                                    painter = painterResource(id = R.drawable.ic_calendar_month_24),
                                    contentDescription = "Time Picker Icon"
                                )
                            }
...
                                    color = MaterialTheme.colorScheme.tertiary,
                                    MaterialTheme.shapes.large
                                ),
                            elevation = FloatingActionButtonDefaults.elevation(0.dp),
                            containerColor = MaterialTheme.colorScheme.primary,
                            onClick = { clockState.show() },
                            text = { Text(text = "Select Time", fontWeight = FontWeight.Bold) },
                            icon = {
                                Icon(
                                    painter = painterResource(id = R.drawable.ic_clock_24),
                                    contentDescription = "Time Picker Icon"
                                )
                            }
...
        Vehicle (
            "2",
            "vehicle2",
            "12322",
            "Hando",
            "Honda",
            "Granny big truck",
        ),
    )
//    ReminderForm(
//        vehicleList = vehicleList,
//        onSubmitReminder = {},
//        onCancel = {},
...
