...
                    containerColor = MaterialTheme.colorScheme.errorContainer,
                    contentColor = MaterialTheme.colorScheme.error
                ),
                modifier = Modifier
                    .height(100.dp)
                    .fillMaxWidth()
                    .testTag("chooseVehicle")
            ) {
                Column(horizontalAlignment = Alignment.CenterHorizontally) {

                    Text(
                        textDecoration = TextDecoration.Underline,
                        fontWeight = FontWeight.Bold,
...
