...
//    }


    val byondBoundsPageCount = 2

    Box(modifier = Modifier
        .testTag("dashboard_screen")
        .fillMaxSize()
        .background(MaterialTheme.colorScheme.background)) {

        HorizontalPager(state = pagerState, beyondBoundsPageCount = byondBoundsPageCount) { page: Int ->
            // Change the current vehicle
            if (pagerState.settledPage < pagerState.pageCount-1) {
...
                            onClick = { onVehicleCardClick(vehicleList[page].vehicleId) })
                    },
                    floatingActionButtonPosition = FabPosition.End,
                    floatingActionButton = {
                        FloatingActionButton(
                            modifier = Modifier
                                .testTag("scan_tire_button")
                                .size(72.dp)
                                .border(
                                    BORDER_WIDTH,
                                    MaterialTheme.colorScheme.tertiary,
                                    MaterialTheme.shapes.extraLarge
                                ),
...
                                fontWeight = FontWeight.Bold
                            )
                            // Add Reminder Button
                            OutlinedButton(
                                modifier = Modifier
                                    .wrapContentWidth()
                                    .testTag("add_reminder_button"),
                                colors = ButtonDefaults.buttonColors(
                                    contentColor = MaterialTheme.colorScheme.onBackground,
                                    containerColor = MaterialTheme.colorScheme.primary),
                                border = BorderStroke( BORDER_WIDTH, MaterialTheme.colorScheme.onBackground),
                                shape = MaterialTheme.shapes.extraLarge,
                                onClick = {
...
