...
        .fillMaxSize()
        .background(color = MaterialTheme.colorScheme.background),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center) {
        IconButton(
            modifier = Modifier
                .testTag("addVehicle")
                .size(110.dp)
                .shadow(elevation = 8.dp, shape = CircleShape)
                .background(MaterialTheme.colorScheme.primary, CircleShape),
            onClick = onAddVehicle) {
            Icon(
                imageVector =  Icons.Rounded.AddCircle,
...
